8371302: [Windows] Stage coordinates in secondary display are not properly updated after changing settings of first display

Reviewed-by: angorya, kcr